# scruxy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
default_config/: config.yaml  regex_patterns.yaml
default_config/providers/: anthropic.yaml  copilot_chat.yaml  copilot_responses.yaml  openai.yaml  openai_responses.yaml
default_config/scripts/: faker_email.py  faker_name.py  faker_phone.py  simple_email.py  simple_name.py  simple_path.py  simple_phone.py
docs/plans/: 2026-03-03-scrubbing-proxy-design.md  2026-03-04-pipeline-tester-design.md  2026-03-04-pipeline-tester-plan.md  2026-03-05-sqlite-token-storage-design.md  2026-03-05-sqlite-token-storage-plan.md
example_plugins/: badge_number_detector.py  file_path_detector.py  project_codename_detector.py
src/scruxy/: __init__.py  __main__.py  app.py  bench_opf.py
src/scruxy/cert/: __init__.py  ca.py  manager.py
src/scruxy/config/: loader.py  models.py
src/scruxy/pipeline/: __init__.py  engine.py  merger.py  models.py  plugin_stage.py  presidio_stage.py  regex_stage.py
src/scruxy/ui/: routes.py  (+3 more)
tests/: __init__.py  conftest.py  test_app.py  test_cert_manager.py  test_concurrent_sessions.py  test_config.py  test_config_persistence.py  test_disk_persistence.py  test_e2e.py  test_file_path_detector.py  test_forward_proxy.py  test_forward_proxy_upstream_rewrite.py  test_lifespan_legacy_config.py  test_merger.py  test_openai_privacy_filter_plugin.py  test_opf_install_and_warn.py  test_pipeline_engine.py  test_pipeline_enhancements.py  test_plugin_base.py  test_plugin_stage.py  test_plugin_storage.py  test_presidio_stage.py  test_provider_anthropic.py  test_provider_openai.py  test_provider_registry.py  test_proxy_routes.py  test_regex_stage.py  test_replacer.py  test_request_scrubber.py  test_response_unscrubber.py  test_round47_hardening.py  test_round48_hardening.py  test_round49_hardening.py  test_round50_hardening.py  test_round51_hardening.py  test_round52_hardening.py  test_round53_hardening.py  test_round54_hardening.py  test_round55_hardening.py  test_round56_hardening.py  (+25 more)
(+58 files in other folders)
